feat: add base layout and icons to sidebar
Sidebar base should be done. Would like to potentially add links and a
background color later.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,55 @@
   <title>Admin Dashboard</title>
 </head>
 <body>
-  
+  <div class="layout-container">
+
+    <div class="sidebar">
+      <nav class="sidebar-nav">
+        <ul>
+          <img src="/icons/view-dashboard.svg" alt="Dashboard icon">
+          <li>Dashboard</li>
+        </ul>
+
+        <ul>
+          <img src="/icons/home.svg" alt="House icon">
+          <li>Home</li>
+
+          <img src="/icons/card-account-details.svg" alt="Profile icon">
+          <li>Profile</li>
+
+          <img src="/icons/message.svg" alt="Message icon">
+          <li>Messages</li>
+
+          <img src="/icons/clock-time-three.svg" alt="Clock icon">
+          <li>History</li>
+
+          <img src="/icons/checkbox-marked-circle-plus-outline.svg"
+          alt="Checkbox icon">
+          <li>Tasks</li>
+
+          <img src="/icons/account-group.svg" alt="Communitities icon">
+          <li>Communities</li>
+        </ul>
+
+        <ul>
+          <img src="/icons/cog.svg" alt="Setting icon">
+          <li>Settings</li>
+
+          <img src="/icons/help-box.svg" alt="Support icon">
+          <li>Support</li>
+
+          <img src="/icons/shield-check.svg" alt="Privacy icon">
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="header"></div>
+
+    <div class="content-container"></div>
+    
+  </div>
 </body>
 </html>
+
+
