--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="layout-container">
 
-    <div class="sidebar">
+    <section class="sidebar">
       <nav class="sidebar-nav">
         <ul>
           <img src="/icons/view-dashboard.svg" alt="Dashboard icon">
@@ -50,11 +50,53 @@
           <li>Privacy</li>
         </ul>
       </nav>
-    </div>
+    </section>
 
-    <div class="header"></div>
+    <section class="header">
+      <div class="search-container">
+        <div class="search">
+          <form action="#" method="get">
+            <label for="search"><img src="/icons/magnify.svg" alt="Search icon"></label>
+            <input type="search" name="search" id="search">
+          </form>
+          
+        </div>
+        <div class="profile">
+          <img src="/icons/bell-ring-outline.svg" alt="Notifications icon">
+          <img src="/icons/pig-variant.svg" alt="User avatar small">
+          <p>User Name</p>
+        </div>
+      </div>
 
-    <div class="content-container"></div>
+      <div class="userinfo-container">
+        <div class="user">
+          <img src="/icons/pig-variant.svg" alt="User avatar large">
+          <div class="greeting">
+            <p>Hi there,</p>
+            <p>User name (@User-name)</p>
+          </div>            
+        </div>
+        <div class="buttons">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="content">
+      <div class="projects">
+        <h3>Your Projects</h3>
+      </div>
+
+      <div class="announcements">
+        <h3>Announcements</h3>
+      </div>
+
+      <div class="trending">
+        <h3>Trending</h3>
+      </div>
+    </section>
     
   </div>
 </body>
