wip: complete placement and look of search branch
Working on styling header piece. Also, I removed the set height on the
card items under content. I decided that I wanted them to be able to
change sizes based on content and not all be uniform. Added the star,
eye, and share buttons to the cards.

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
             Bonbon bonbon fruitcake caramels gingerbread jelly beans.
             Dessert pastry cheesecake pie toffee apple pie caramels muffin
             jelly-o.</p>
+            <div class="card-icons">
+              <img src="/icons/star-plus-outline.svg" alt="Favorite
+              icon">
+              <img src="/icons/eye-plus-outline.svg" alt="View more
+              icon">
+              <img src="/icons/share-variant-outline.svg" alt="Share icon">
+            </div>
           </div>
           <div class="card">
             <h4>Less Cool Project</h4>
@@ -103,18 +110,39 @@
             croissant candy canes soufflé marshmallow apple pie. Sweet
             roll fruitcake tart jelly carrot cake biscuit jelly-o.
             Chocolate bar cake cheesecake jujubes sesame snaps.</p>
+            <div class="card-icons">
+              <img src="/icons/star-plus-outline.svg" alt="Favorite
+              icon">
+              <img src="/icons/eye-plus-outline.svg" alt="View more
+              icon">
+              <img src="/icons/share-variant-outline.svg" alt="Share icon">
+            </div>
           </div>
           <div class="card">
             <h4>Impossible App</h4>
             <p>Tart cake oat cake sugar plum apple pie. Topping gummies
             gummi bears shortbread soufflé topping. Cake dragée oat cake
             wafer cupcake gingerbread cake marzipan sesame snaps.</p>
+            <div class="card-icons">
+              <img src="/icons/star-plus-outline.svg" alt="Favorite
+              icon">
+              <img src="/icons/eye-plus-outline.svg" alt="View more
+              icon">
+              <img src="/icons/share-variant-outline.svg" alt="Share icon">
+            </div>
           </div>
           <div class="card">
             <h4>Easy Peasy App</h4>
             <p>Bonbon donut soufflé tootsie roll chupa chups wafer.
             Pudding cupcake cookie topping marshmallow. Bonbon cake
             jujubes brownie liquorice powder gummies tart.</p>
+            <div class="card-icons">
+              <img src="/icons/star-plus-outline.svg" alt="Favorite
+              icon">
+              <img src="/icons/eye-plus-outline.svg" alt="View more
+              icon">
+              <img src="/icons/share-variant-outline.svg" alt="Share icon">
+            </div>
           </div>
           <div class="card">
             <h4>Ad Blocker</h4>
@@ -124,6 +152,13 @@
             sugar plum gummi bears sesame snaps cake oat cake pastry.
             Carrot cake chupa chups chocolate bar marshmallow liquorice
             sugar plum ice cream.</p>
+            <div class="card-icons">
+              <img src="/icons/star-plus-outline.svg" alt="Favorite
+              icon">
+              <img src="/icons/eye-plus-outline.svg" alt="View more
+              icon">
+              <img src="/icons/share-variant-outline.svg" alt="Share icon">
+            </div>
           </div>
           <div class="card">
             <h4>Money Maker</h4>
@@ -133,6 +168,13 @@
             chupa chups carrot cake liquorice cookie dragée. Cupcake
             cupcake jelly powder marshmallow dragée chocolate cake
             fruitcake cake.</p>
+            <div class="card-icons">
+              <img src="/icons/star-plus-outline.svg" alt="Favorite
+              icon">
+              <img src="/icons/eye-plus-outline.svg" alt="View more
+              icon">
+              <img src="/icons/share-variant-outline.svg" alt="Share icon">
+            </div>
           </div>
         </div>
       </div>
