--- a/index.html
+++ b/index.html
@@ -182,25 +182,29 @@
       <div class="wrapper">
         <div class="announcements">
           <h3>Announcements</h3>
-          <div class="announcement">
-            <h5>Site Maintenance</h5>
-            <p>Dragée lollipop danish sesame snaps topping macaroon.
-            Liquorice lemon drops cupcake brownie candy canes. Pastry oat
-            cake sweet jelly beans gingerbread topping brownie gingerbread
-            dragée.</p>
-          </div>
-          <div class="announcement">
-            <h5>Community Share Day</h5>
-            <p>Chupa chups topping cake cake sweet roll. Chocolate lemon
-            drops pastry topping wafer. Biscuit pie cupcake chocolate
-            gingerbread bear claw oat cake cookie tiramisu.</p>
-          </div>
-          <div class="announcement">
-            <h5>Updated Privacy Policy</h5>
-            <p>Topping fruitcake powder icing pie. Wafer donut sweet
-            pudding chocolate cake croissant powder. Dragée jelly powder
-            cake brownie. Toffee tootsie roll jujubes sugar plum tootsie
-            roll topping caramels jelly.</p>
+          <div class="announcement-cards">
+            <div class="announcement">
+              <h5>Site Maintenance</h5>
+              <p>Dragée lollipop danish sesame snaps topping macaroon.
+              Liquorice lemon drops cupcake brownie candy canes. Pastry oat
+              cake sweet jelly beans gingerbread topping brownie gingerbread
+              dragée.</p>
+              <div class="border-bottom"></div>
+            </div>
+            <div class="announcement">
+              <h5>Community Share Day</h5>
+              <p>Chupa chups topping cake cake sweet roll. Chocolate lemon
+              drops pastry topping wafer. Biscuit pie cupcake chocolate
+              gingerbread bear claw oat cake cookie tiramisu.</p>
+              <div class="border-bottom"></div>
+            </div>
+            <div class="announcement">
+              <h5>Updated Privacy Policy</h5>
+              <p>Topping fruitcake powder icing pie. Wafer donut sweet
+              pudding chocolate cake croissant powder. Dragée jelly powder
+              cake brownie. Toffee tootsie roll jujubes sugar plum tootsie
+              roll topping caramels jelly.</p>
+            </div>
           </div>
         </div>
 
